Test to list deleted product